Permiti todos los headers